board: rockchip: Add FriendlyElec rk3328 board
Change-Id: Ib1fb3a628d924faadc9fc2c0e704ae166130ce33
Signed-off-by: hmz007 <hmz007@gmail.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -47,6 +47,7 @@ dtb-$(CONFIG_ARCH_ROCKCHIP) += \
 	rk3288-vyasa.dtb \
 	rk3308-evb.dtb \
 	rk3328-evb.dtb \
+	rk3328-nanopi-r2.dtb \
 	rk3368-lion.dtb \
 	rk3368-sheep.dtb \
 	rk3368-geekbox.dtb \
