arm64: rk3399: r4s: disable nodes for vopb/vopl
Disable vopb and vopl to fix:
  rk3399_vop vop@ff8f0000: failed to get ahb reset (ret=-524)
  rk3399_vop vop@ff8f0000: failed to get ahb reset (ret=-524)

Signed-off-by: hmz007 <hmz007@gmail.com>

--- a/arch/arm/dts/rk3399-nanopi-r4s.dts
+++ b/arch/arm/dts/rk3399-nanopi-r4s.dts
@@ -136,3 +136,19 @@
 &vcc3v3_sys {
 	vin-supply = <&vcc5v0_sys>;
 };
+
+&vopb {
+	status = "disabled";
+};
+
+&vopb_mmu {
+	status = "disabled";
+};
+
+&vopl {
+	status = "disabled";
+};
+
+&vopl_mmu {
+	status = "disabled";
+};
