--- a/configs/nanopi5_defconfig
+++ b/configs/nanopi5_defconfig
@@ -7,7 +7,10 @@ CONFIG_SPL_FIT_GENERATOR="arch/arm/mach-rockchip/make_fit_atf.sh"
 CONFIG_ROCKCHIP_RK3568=y
 CONFIG_ROCKCHIP_FIT_IMAGE=y
 CONFIG_ROCKCHIP_VENDOR_PARTITION=y
+CONFIG_DM_DMC=y
+CONFIG_ROCKCHIP_DMC_FSP=y
 CONFIG_ROCKCHIP_FIT_IMAGE_PACK=y
+CONFIG_ROCKCHIP_NEW_IDB=y
 CONFIG_SPL_SERIAL_SUPPORT=y
 CONFIG_SPL_DRIVERS_MISC_SUPPORT=y
 CONFIG_TARGET_NANOPI5=y
@@ -33,7 +36,6 @@ CONFIG_SPL_BOARD_INIT=y
 # CONFIG_SPL_RAW_IMAGE_SUPPORT is not set
 # CONFIG_SPL_LEGACY_IMAGE_SUPPORT is not set
 CONFIG_SPL_SEPARATE_BSS=y
-# CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_SECTOR is not set
 CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION=y
 CONFIG_SPL_SHA256_SUPPORT=y
 CONFIG_SPL_CRYPTO_SUPPORT=y
@@ -106,7 +108,7 @@ CONFIG_ADC_KEY=y
 CONFIG_MISC=y
 CONFIG_SPL_MISC=y
 CONFIG_ROCKCHIP_OTP=y
-CONFIG_SPL_ROCKCHIP_SECURE_OTP_V1=y
+CONFIG_SPL_ROCKCHIP_SECURE_OTP=y
 CONFIG_MMC_DW=y
 CONFIG_MMC_DW_ROCKCHIP=y
 CONFIG_MMC_SDHCI=y
@@ -155,6 +157,8 @@ CONFIG_PWM_ROCKCHIP=y
 CONFIG_RAM=y
 CONFIG_SPL_RAM=y
 CONFIG_TPL_RAM=y
+CONFIG_DM_RAMDISK=y
+CONFIG_RAMDISK_RO=y
 CONFIG_ROCKCHIP_SDRAM_COMMON=y
 CONFIG_ROCKCHIP_TPL_INIT_DRAM_TYPE=0
 CONFIG_DM_RESET=y
@@ -203,6 +207,7 @@ CONFIG_RSA_E_SIZE=0x10
 CONFIG_RSA_C_SIZE=0x20
 CONFIG_SHA512=y
 CONFIG_LZ4=y
+CONFIG_LZMA=y
 CONFIG_SPL_GZIP=y
 CONFIG_ERRNO_STR=y
 # CONFIG_EFI_LOADER is not set
