--- a/configs/nanopi6_defconfig
+++ b/configs/nanopi6_defconfig
@@ -13,6 +13,7 @@ CONFIG_ROCKCHIP_FIT_IMAGE_PACK=y
 CONFIG_ROCKCHIP_NEW_IDB=y
 CONFIG_LOADER_INI="RK3588MINIALL.ini"
 CONFIG_TRUST_INI="RK3588TRUST.ini"
+CONFIG_PSTORE=y
 CONFIG_SPL_SERIAL_SUPPORT=y
 CONFIG_SPL_DRIVERS_MISC_SUPPORT=y
 CONFIG_TARGET_NANOPI6=y
@@ -44,7 +45,7 @@ CONFIG_SPL_MMC_WRITE=y
 CONFIG_SPL_MTD_SUPPORT=y
 CONFIG_SPL_ATF=y
 CONFIG_FASTBOOT_BUF_ADDR=0xc00800
-CONFIG_FASTBOOT_BUF_SIZE=0x04000000
+CONFIG_FASTBOOT_BUF_SIZE=0x07000000
 CONFIG_FASTBOOT_FLASH=y
 CONFIG_FASTBOOT_FLASH_MMC_DEV=0
 CONFIG_CMD_BOOTZ=y
@@ -101,6 +102,7 @@ CONFIG_DM_RNG=y
 CONFIG_RNG_ROCKCHIP=y
 CONFIG_SCMI_FIRMWARE=y
 CONFIG_SPL_SCMI_FIRMWARE=y
+CONFIG_GPIO_HOG=y
 CONFIG_ROCKCHIP_GPIO=y
 CONFIG_ROCKCHIP_GPIO_V2=y
 CONFIG_SYS_I2C_ROCKCHIP=y
@@ -112,6 +114,7 @@ CONFIG_MISC=y
 CONFIG_SPL_MISC=y
 CONFIG_MISC_DECOMPRESS=y
 CONFIG_SPL_MISC_DECOMPRESS=y
+CONFIG_ROCKCHIP_OTP=y
 CONFIG_ROCKCHIP_HW_DECOMPRESS=y
 CONFIG_SPL_ROCKCHIP_HW_DECOMPRESS=y
 CONFIG_SPL_ROCKCHIP_SECURE_OTP=y
