--- a/configs/nanopi6_ab_defconfig
+++ b/configs/nanopi6_ab_defconfig
@@ -45,6 +45,7 @@ CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_PARTITION=0x1
 CONFIG_SPL_MMC_WRITE=y
 CONFIG_SPL_MTD_SUPPORT=y
 CONFIG_SPL_ATF=y
+CONFIG_SPL_AB=y
 CONFIG_FASTBOOT_BUF_ADDR=0xc00800
 CONFIG_FASTBOOT_BUF_SIZE=0x07000000
 CONFIG_FASTBOOT_FLASH=y
